--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,6 +1,12 @@
 header {
-  padding: 10px 0;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background: var(--header);
   box-shadow: var(--shadow);
+  padding: 10px 0;
+  transition: all ease 0.5s;
+  z-index: 10;
 }
 
 .header-content {
@@ -16,10 +22,168 @@ header {
 }
 
 .logo img {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
 }
 
 .logo span {
-  font-size: var(--font-max);
+  font-size: var(--font-medium);
+  color: var(--default);
+}
+
+.logo span b {
+  color: var(--primary);
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.navbar li {
+  margin: 0 6px;
+  transition: all ease 0.5s;
+}
+
+.navbar li a {
+  text-decoration: none;
+  font-size: var(--font-normal);
+  font-weight: 500;
+  color: var(--default);
+  transition: all ease 0.5s;
+}
+
+.navbar li:last-child a {
+  background-color: var(--primary);
+  box-shadow: var(--shadow);
+  color: var(--white) !important;
+  padding: 5px;
+  border-radius: var(--radius-normal);
+}
+
+.navbar li:last-child:hover {
+  transform: scale(1.1);
+}
+
+.navbar li a:hover {
+  color: var(--primary);
+}
+
+.btn-header-mobile {
+  display: none;
+}
+
+.logo-mobile {
+  display: none;
+}
+
+.hamburger {
+  border-top: 2px solid;
+  width: 20px;
+}
+
+.hamburger::after,
+.hamburger::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background: currentColor;
+  margin-top: 5px;
+  transition: 0.3s;
+  position: relative;
+}
+
+.btn-header-mobile.active .hamburger {
+  border-top-color: transparent;
+}
+
+.btn-header-mobile.active .hamburger::before {
+  transform: rotate(135deg);
+}
+
+.btn-header-mobile.active .hamburger::after {
+  transform: rotate(-135deg);
+  top: -7px;
+}
+
+@media screen and (max-width: 992px) {
+  .btn-header-mobile {
+    display: flex;
+  }
+
+  .logo-mobile {
+    width: 100%;
+    padding: 5px 0;
+    display: block;
+  }
+
+  .navbar {
+    width: 40%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -40%;
+    flex-direction: column;
+    align-items: start;
+    background: var(--header);
+    box-shadow: var(--shadow);
+    transition: all ease 0.5s;
+    padding: 10px 40px;
+    z-index: 10;
+  }
+
+  .open-navbar {
+    width: 40%;
+    left: 0;
+  }
+
+  .navbar li {
+    width: 100%;
+    border: var(--soft-border);
+    border-radius: var(--radius-medium);
+    transition: all ease 0.5s;
+    cursor: pointer;
+    margin: 10px 0;
+  }
+
+  .navbar li:hover {
+    transform: scale(1.1);
+    box-shadow: var(--shadow);
+  }
+
+  .navbar li:hover > a {
+    color: var(--primary);
+  }
+
+  .navbar li a {
+    width: 100%;
+    display: inline-block;
+    padding: 10px;
+  }
+
+  .navbar li:last-child a {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    width: 70%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -70%;
+    flex-direction: column;
+    background: var(--header);
+    box-shadow: var(--shadow);
+    transition: all ease 0.5s;
+    z-index: 10;
+  }
+
+  .open-navbar {
+    width: 70%;
+    left: 0;
+  }
 }
