--- a/src/assets/css/hero.css
+++ b/src/assets/css/hero.css
@@ -2,27 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(var(--min-height) - 80px);
-  background-image: url(./../images/backgrounds/home-background.jpg);
+  min-height: var(--min-height);
+  background-image: url(./../images/backgrounds/hero-bg.svg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.hero::after {
-  content: "";
-  position: absolute;
-  top: 80px;
-  left: 0;
-  width: 100%;
-  height: calc(var(--min-height) - 80px);
-  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0 30px;
 }
 
 .hero-description {
   max-width: 600px;
-  background: var(--galassmorphism);
-  backdrop-filter: blur(5px);
+  background: var(--header);
+  box-shadow: var(--shadow);
   padding: 40px;
   border-radius: var(--radius-medium);
   text-align: center;
@@ -30,4 +21,9 @@
 
 .hero-description h2 {
   font-size: var(--font-max);
+  margin-bottom: 15px;
+}
+
+.hero-description p {
+  margin-bottom: 15px;
 }
