--- a/src/assets/css/hero.css
+++ b/src/assets/css/hero.css
@@ -18,7 +18,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(./../images/backgrounds/teste.png);
+  background-image: url(./../images/backgrounds/teste2.png);
   /* background-size: cover; */
   /* background-position: center; */
   background-repeat: no-repeat;
@@ -32,7 +32,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  /* background-color: rgba(0, 0, 0, 0.2); */
   z-index: -1;
 }
 
