--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,7 +6,9 @@
 @import url(hero.css);
 /* @import url(swiper-slide.css); */
 /* @import url(articles.css); */
-/* @import url(about.css); */
+@import url(about.css);
+@import url(features.css);
+
 /* @import url(team.css); */
 /* @import url(contact.css); */
 @import url(footer.css);
@@ -15,4 +17,5 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--body);
   color: var(--default);
+  scroll-behavior: smooth;
 }
