--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,7 +9,7 @@
 @import url(about.css);
 @import url(features.css);
 
-/* @import url(team.css); */
+@import url(team.css);
 /* @import url(contact.css); */
 @import url(footer.css);
 
