--- a/src/assets/css/team.css
+++ b/src/assets/css/team.css
@@ -28,6 +28,7 @@
 .team-seo-details h2 {
   text-align: center;
   font-size: var(--font-max);
+  color: var(--primary);
 }
 
 .team-seo-details p {
@@ -82,6 +83,10 @@
 
 .team-details {
   margin-top: 30px;
+}
+
+.team-details h2 {
+  color: var(--primary);
 }
 
 @media screen and (max-width: 1280px) {
