--- a/src/assets/css/hero.css
+++ b/src/assets/css/hero.css
@@ -4,11 +4,25 @@
   justify-content: center;
   align-items: center;
   min-height: var(--min-height);
-  background-image: url(./../images/backgrounds/hero-bg.svg);
+  background-image: url(./../images/backgrounds/yellow-waves-hero-bg.svg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   padding: 0 30px;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  min-height: calc(var(--min-height) - 70px);
+  background-image: url(./../images/backgrounds/blue-clouds-hero-bg-before.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
 .hero-description {
@@ -43,7 +57,7 @@
 @keyframes animate {
   0%,
   100% {
-    transform: translateY(0px);
+    transform: translateY(5px);
   }
 
   50% {
@@ -55,6 +69,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  -webkit-filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(0 5px 5px rgba(0, 0, 0, 0.2));
   animation: rotate 10s linear infinite;
 }
 
@@ -98,5 +114,20 @@
     50% {
       transform: translateY(80px);
     }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .hero-description h2 {
+    font-size: var(--font-normal);
+  }
+
+  .hero-description p {
+    font-size: var(--font-min);
+  }
+
+  .btn-hero {
+    font-size: var(--font-normal);
+    height: 20px;
   }
 }
