feat: listando endereços

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,14 +4,11 @@
 /* ==== COMPONENTS ==== */
 @import url(header.css);
 @import url(hero.css);
-/* @import url(swiper-slide.css); */
-/* @import url(articles.css); */
 @import url(about.css);
 @import url(features.css);
-
 @import url(team.css);
-/* @import url(contact.css); */
 @import url(footer.css);
+@import url(app.css);
 
 body {
   font-family: "Poppins", sans-serif;
