--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,9 +1,30 @@
-.addresses-content {
+.app-content {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   justify-content: space-between;
   gap: 10px;
+}
+
+.addresses-content {
+  width: 445px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 15px;
+  max-height: 800px;
+  overflow-y: scroll;
+}
+
+.addresses-content::-webkit-scrollbar {
+  width: 12px;
+}
+
+.addresses-content::-webkit-scrollbar-thumb {
+  background-color: var(--header);
+  border-radius: 6px;
+}
+
+.addresses-content::-webkit-scrollbar-track {
+  background-color: var(--body);
 }
 
 .addresses-card {
@@ -15,7 +36,7 @@
 }
 
 .active {
-  outline: 2px solid var(--primary);
+  border: 2px solid var(--primary);
 }
 
 .addresses-card-header h2 {
@@ -33,6 +54,18 @@
   font-size: var(--font-small);
 }
 
-.addresses-card-body p b {
-  /* color: var(--primary); */
+@media screen and (max-width: 992px) {
+  .app-content {
+    flex-direction: column;
+  }
+
+  .addresses-content {
+    width: 100%;
+    max-height: 400px;
+    padding-right: 5px;
+  }
+
+  .addresses-card {
+    width: 100%;
+  }
 }
