fix: melhorando a versoão mobile do mapa solar

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -6,7 +6,8 @@ footer {
   align-items: center;
   background-color: var(--header);
   box-shadow: var(--shadow);
-  padding: 15px 0;
+  padding: 15px 5px;
+  text-align: center;
 }
 
 footer a {
