--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5,7 +5,7 @@
 }
 
 .addresses-content {
-  width: 445px;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -54,18 +54,27 @@
   font-size: var(--font-small);
 }
 
+.google-map-content {
+  height: 800px;
+}
+
 @media screen and (max-width: 992px) {
   .app-content {
     flex-direction: column;
   }
 
   .addresses-content {
-    width: 100%;
-    max-height: 400px;
-    padding-right: 5px;
+    width: 90%;
+    max-height: 450px;
+    padding-right: 10px;
   }
 
   .addresses-card {
     width: 100%;
+  }
+
+  .google-map-content {
+    padding-right: 20px;
+    height: 400px;
   }
 }
