--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -54,12 +54,8 @@ header {
   transition: all ease 0.5s;
 }
 
-.navbar li:nth-child(6) a {
-  background-color: var(--primary);
-  box-shadow: var(--shadow);
+.access-btn:hover {
   color: var(--white) !important;
-  padding: 5px;
-  border-radius: var(--radius-normal);
 }
 
 .navbar li a:hover {
