--- a/src/assets/css/boot.css
+++ b/src/assets/css/boot.css
@@ -28,6 +28,7 @@ main {
   --shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --soft-border: 1px solid rgba(0, 0, 0, 0.1);
   --border: 1px solid rgba(0, 0, 0, 0.2);
+  --thumb: rgba(0, 0, 0, 0.2);
   --radius-normal: 5px;
   --radius-medium: 10px;
   --radius-large: 20px;
@@ -103,6 +104,7 @@ main {
   /* ==== SHADOWS & BORDERS ====  */
   --shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
   --soft-border: 1px solid rgba(255, 255, 255, 0.1);
+  --thumb: rgba(255, 255, 255, 0.2);
 }
 
 /* ==== INPUTS ==== */
