--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,6 +9,7 @@
 @import url(team.css);
 @import url(footer.css);
 @import url(app.css);
+@import url(loader.css);
 
 body {
   font-family: "Poppins", sans-serif;
